package com.y4vra.irboardbackend.entities.enums;

import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;

public enum PriorityStyle {
    TERNARY,
    MOSCOW
}
