package com.y4vra.irboardbackend.entities.enums;

public enum ProjectState {
    ACTIVE,
    FINISHED,
    DEACTIVATED,
    REMOVED,
}
